--- a/src/app/modules/work/components/health-care/health-care.component.html
+++ b/src/app/modules/work/components/health-care/health-care.component.html
@@ -181,7 +181,7 @@
             <div class="col-md-6 left">
                 <h2>Other Case Studies</h2>
                 <div class="button">
-                    <div class="btn">See All Works <img src="./assets/images/home/red-arrow.png"></div>
+                    <div class="btn">See All Works <img src="./assets/images/rightarrow-red.svg"></div>
                 </div>
             </div>
             <div class="col-md-6 right">
