--- a/src/app/modules/services/components/usability-testing/usability-testing.component.html
+++ b/src/app/modules/services/components/usability-testing/usability-testing.component.html
@@ -63,11 +63,11 @@
             <ul ngbNav #nav="ngbNav">
               <li ngbNavItem>
                 <a ngbNavLink> <svg xmlns="http://www.w3.org/2000/svg" width="16.546" height="17.825" viewBox="0 0 16.546 17.825"> <g id="Group_5633" data-name="Group 5633" transform="translate(15.131 1) rotate(90)"> <path id="Path_9437" data-name="Path 9437" d="M-11443.52,11612.816h-15.825l6.716,6.716" transform="translate(11459.345 -11605.815)" fill="none" stroke="#fa4e2e" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/> <path id="Path_9438" data-name="Path 9438" d="M-11459.344,11615.815l3-3" transform="translate(11463.06 -11612.814)" fill="none" stroke="#fa4e2e" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/> </g> </svg></a>
-                <ng-template ngbNavContent>To get an understanding of users mental model</ng-template>
+                <ng-template ngbNavContent>Unsure of why the users are dropping off the product</ng-template>
               </li>
               <li ngbNavItem>
                 <a ngbNavLink> <svg xmlns="http://www.w3.org/2000/svg" width="16.546" height="17.825" viewBox="0 0 16.546 17.825"> <g id="Group_5633" data-name="Group 5633" transform="translate(15.131 1) rotate(90)"> <path id="Path_9437" data-name="Path 9437" d="M-11459.344,11612.816h15.825l-6.716,6.716" transform="translate(11459.344 -11605.815)" fill="none" stroke="#fa4e2e" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/> <path id="Path_9438" data-name="Path 9438" d="M-11456.344,11615.815l-3-3" transform="translate(11468.453 -11612.814)" fill="none" stroke="#fa4e2e" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/> </g> </svg></a>
-                <ng-template ngbNavContent>Not sure which option of design will be beneficial</ng-template>
+                <ng-template ngbNavContent>End users are not using the product in the way it was intended to be used ?</ng-template>
               </li>
             </ul>
           </div>
