--- a/src/app/components/blogs/blogs.component.scss
+++ b/src/app/components/blogs/blogs.component.scss
@@ -5,7 +5,7 @@
 .blogs{
    
     .banner{
-        background-image: url('/assets/images/bg.png');
+        background-image: url('/./assets/images/bg.png');
         background-repeat: no-repeat;
         background-size: cover;
         position: relative;
