--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -3,7 +3,7 @@
 @import '~bootstrap/scss/mixins';
 
 .banner{
-    background-image: url('/assets/images/bg.png');
+    background-image: url('/./assets/images/bg.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-color: #FFE14D;
@@ -260,9 +260,9 @@
         .layout-left{
             padding: 30px 40px;
         }
-        .only-mobile{
-            display: none;
-        }
+        // .only-mobile{
+        //     display: none;
+        // }
     }
 }
 
@@ -330,3 +330,8 @@ p{
     padding-left: 10px;
     padding-top: 15px;
 }
+
+iframe {
+    width:100%;
+    height:560px;
+  }
