--- a/src/app/components/engagement-models/engagement-models.component.scss
+++ b/src/app/components/engagement-models/engagement-models.component.scss
@@ -5,7 +5,7 @@
 .engagement{
     
     .banner{
-        background-image: url('/assets/images/bg3.png');
+        background-image: url('/./assets/images/bg3.png');
         background-repeat: no-repeat;
         background-size: cover;
         position: relative;
