--- a/src/app/components/career/career.component.scss
+++ b/src/app/components/career/career.component.scss
@@ -4,7 +4,7 @@
 .career{
 
     .banner{
-        background-image: url('/./assets/images/bg3.png');
+        background-image: url('/assets/images/bg3.png');
         background-repeat: no-repeat;
         background-size: cover;
         position: relative;
