--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -3,7 +3,7 @@
 @import '~bootstrap/scss/mixins';
 
 .banner{
-    background-image: url('/./assets/images/bg.png');
+    background-image: url('/assets/images/bg.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-color: #FFE14D;
