--- a/src/app/modules/services/components/usability-testing/usability-testing.component.scss
+++ b/src/app/modules/services/components/usability-testing/usability-testing.component.scss
@@ -7,7 +7,7 @@
         display: none;
     }
 .banner{
-    background-image: url('/./assets/images/bg.png');
+    background-image: url('/assets/images/bg.png');
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
