--- a/src/app/modules/career/components/ux-job-apply/ux-job-apply.component.scss
+++ b/src/app/modules/career/components/ux-job-apply/ux-job-apply.component.scss
@@ -5,7 +5,7 @@
 .career-ux{
    
     .banner{
-        background-image: url('/./assets/images/bg3.png');
+        background-image: url('/assets/images/bg3.png');
         background-repeat: no-repeat;
         background-size: cover;
         position: relative;
