--- a/src/app/components/works/works.component.scss
+++ b/src/app/components/works/works.component.scss
@@ -3,7 +3,7 @@
 @import '~bootstrap/scss/mixins';
 
 .banner{
-        background-image: url('/assets/images/layout-2.png');
+        background-image: url('/./assets/images/layout-2.png');
         background-repeat: no-repeat;
         background-size: cover;
         position: relative;
