--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="home">
-    <div class="layout">
+    <div class="layout" style="background-image: url(/assets/images/layout-1.png);">
        <div class="container">
           <h2>We design and bring</h2>
           <h1>Digital Transformation</h1>
