--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -4,7 +4,7 @@
 
 .home{
     .layout{
-        background-image: url('/./assets/images/layout-1.png');
+        //background-image: url('/dev/assets/images/layout-1.png');
         background-repeat: no-repeat;
         background-size: cover;
         position: relative;
