--- a/src/app/components/about-us/about-us.component.scss
+++ b/src/app/components/about-us/about-us.component.scss
@@ -7,7 +7,7 @@
         display: none;
     }
     .about{
-        background-image: url('/./assets/images/bg3.png');
+        background-image: url('/dev/assets/images/bg3.png');
         background-repeat: no-repeat;
         background-size: cover;
         position: relative;
