--- a/src/app/modules/services/components/ui-development/ui-development.component.scss
+++ b/src/app/modules/services/components/ui-development/ui-development.component.scss
@@ -4,7 +4,7 @@
 .services{
     padding: 50px 0px;
 .banner{
-    background-image: url('/./assets/images/bg.png');
+    background-image: url('/dev/assets/images/bg.png');
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
