--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,7 +9,7 @@
       <ngu-carousel class="work-carousel" #workCarousel [inputs]="worksCarouselConfig" [dataSource]="works">
          <ngu-tile *nguCarouselDef="let item; let i = index">
             <div class="row">
-               <div class="col-md-6">
+               <div class="col-md-6 second">
                    <div class="card">
                        <h3>Feature Work</h3>
                        <h2>{{ item.title }}</h2>
@@ -19,7 +19,7 @@
                        </div>
                    </div>
                </div>
-               <div class="col-md-6 step-image">
+               <div class="col-md-6 step-image first">
                    <div class="image">
                        <img [src]="item.img">
                    </div>
@@ -84,9 +84,10 @@
        </div>-->
     <div class="products">
        <div class="container">
-          <div class="logo">
+          <h4>uxmint design</h4>
+          <!-- <div class="logo">
              <img src="./assets/images/logo-white.png">
-          </div>
+          </div> -->
           <div class="row">
              <div class="col-md-9">
                 <h2>Sculpting products that Users admire & Businesses benefit</h2>
@@ -102,7 +103,39 @@
           <div class="button">
              <div class="btn">Get to know us <img src="./assets/images/home/red-arrow.png"></div>
           </div>
-          <div class="flex">
+          <div class="row">
+             <div class="col-md-2 icon">
+               <div class="icon1">
+                  <img src="./assets/images/home/sify.png">
+               </div>
+             </div>
+             <div class="col-md-2 icon">
+               <div class="icon2">
+                  <img src="./assets/images/home/larsen-toubro.png">
+               </div>
+             </div>
+             <div class="col-md-2 icon">
+               <div class="icon3">
+                  <img src="./assets/images/home/world-vision.png">
+               </div>
+             </div>
+             <div class="col-md-2 icon">
+               <div class="icon4">
+                  <img src="./assets/images/home/bigfday.png">
+               </div>
+             </div>
+             <div class="col-md-2 icon">
+               <div class="icon5">
+                  <img src="./assets/images/home/fca.png">
+               </div>
+             </div>
+             <div class="col-md-2 icon">
+               <div class="icon6">
+                  <img src="./assets/images/home/sgv.png">
+               </div>
+             </div>
+          </div>
+          <!-- <div class="flex">
              <div class="icon1">
                 <img src="./assets/images/home/sify.png">
              </div>
@@ -121,7 +154,7 @@
              <div class="icon6">
                 <img src="./assets/images/home/sgv.png">
              </div>
-          </div>
+          </div> -->
        </div>
     </div>
     <div class="cater">
@@ -141,7 +174,7 @@
                       </div>
                    </div>
                    <div class="col-md-9">
-                      <h4>Enterprise <br>Applications</h4>
+                      <h4>Enterprise Applications</h4>
                    </div>
                 </div>
                 <div class="row types">
@@ -151,7 +184,7 @@
                       </div>
                    </div>
                    <div class="col-md-9">
-                      <h4>Product <br>Development</h4>
+                      <h4>Product Development</h4>
                    </div>
                 </div>
                 <div class="row types">
@@ -161,7 +194,7 @@
                       </div>
                    </div>
                    <div class="col-md-9">
-                      <h4>Strategy <br>Design</h4>
+                      <h4>Strategy Design</h4>
                    </div>
                 </div>
              </div>
@@ -173,7 +206,7 @@
                       </div>
                    </div>
                    <div class="col-md-9">
-                      <h4>Information <br>Portals</h4>
+                      <h4>Information Portals</h4>
                    </div>
                 </div>
                 <div class="row types">
@@ -183,7 +216,7 @@
                       </div>
                    </div>
                    <div class="col-md-9">
-                      <h4>Digital <br>Transformation</h4>
+                      <h4>Digital Transformation</h4>
                    </div>
                 </div>
                 <div class="row types">
@@ -193,7 +226,7 @@
                       </div>
                    </div>
                    <div class="col-md-9">
-                      <h4>Mobile <br>Applications</h4>
+                      <h4>Mobile Applications</h4>
                    </div>
                 </div>
              </div>
@@ -203,9 +236,10 @@
     <div class="blogs">
        <div class="row">
           <div class="col-md-6 left">
-             <div class="logo">
+             <h4>uxmint design</h4>
+             <!-- <div class="logo">
                 <img src="./assets/images/logo-white.png">
-             </div>
+             </div> -->
              <h2>MINTify your thoughts with our latest blogs and articles</h2>
              <div class="button">
                 <div class="btn">Read Blog <img src="./assets/images/home/red-arrow.png"></div>
