--- a/src/app/components/services/services.component.scss
+++ b/src/app/components/services/services.component.scss
@@ -295,6 +295,6 @@
 .nav-pills a{
     color: #282829;
 }
-.flex-column{
-    padding: 75px 0px;
-}
+// .flex-column{
+//     padding: 75px 0px;
+// }
