--- a/src/app/components/engagement-models/engagement-models.component.scss
+++ b/src/app/components/engagement-models/engagement-models.component.scss
@@ -61,9 +61,12 @@
 }
 @include media-breakpoint-down(sm) {
     .banner{
-        height: 500px;
+        height: 600px;
         .engagement-layout{
             padding: 150px 0px;
+            h1{
+                margin-bottom: 40px;
+            }
     }
 
     }
@@ -337,44 +340,18 @@
         .card{
             border: none;
             padding: 100px 10px 0px 25px;
+            h2{
+                font-size: 38px;
+            }
         }
         .design-right{
-            padding: 150px 0px;
+            padding: 150px 0px 20px 0;
         }
     }
 }
 // Carousel
 .item{
     padding: 0;
-}
-.ngucarousel-indicator{
-    // text-align: center;
-    width: 100%;
-    padding-bottom: 20px;
-    padding-top: 30px;
-    padding-left: 40px;
-    li{
-        display: inline-block;
-        line-height: 22px;
-        a{
-            display: block;
-            margin: 0 5px;
-            width: 15px;
-            height: 15px;
-            border: 2px solid #FFF;
-            background-color: #D0D0D0 !important;
-            text-indent: -999px;
-            overflow: hidden;
-            border-radius: 10px;
-            cursor: pointer;
-            &.active{
-                width: 11px;
-                height: 11px;
-                border: 8px solid #C3343C;
-                background-color: #C3343C !important;
-            }
-        }
-    }
 }
 .ngucarousel-indicator-two{
     text-align: center;
@@ -391,7 +368,7 @@
             width: 15px;
             height: 15px;
             border: 2px solid #FFF;
-            background-color: #D0D0D0 !important;
+            background-color: #FFF !important;
             text-indent: -999px;
             overflow: hidden;
             border-radius: 10px;
@@ -399,8 +376,8 @@
             &.active{
                 width: 11px;
                 height: 11px;
-                border: 8px solid #C3343C;
-                background-color: #C3343C !important;
+                border: 8px solid #000;
+                background-color: #000 !important;
             }
         }
     }
