--- a/src/app/components/works/works.component.scss
+++ b/src/app/components/works/works.component.scss
@@ -30,18 +30,18 @@
     }
     @include media-breakpoint-down(md) {
 
-        height: 540px;
+        height: 400px;
         .work-layout{
             padding: 125px 15px;
+            h1{
+                font-size: 36px;
+            }
         }
     }
     @include media-breakpoint-down(sm) {
         height: 500px;
         .work-layout{
             padding: 100px 0px;
-            h1{
-                font-size: 36px;
-            }
        }
     }
 }
@@ -77,11 +77,23 @@
 
             .five{
                 padding: 85px 25px;
-        
+                h1{
+                    font-size: 100px;
+                
+                }
+                span{
+                    font-size: 40px;
+                }
             }
             .seven{
                 padding: 85px 25px;
-        
+                h1{
+                    font-size: 100px;
+                
+                }
+                span{
+                    font-size: 40px;
+                }
             }
         }
         
@@ -144,10 +156,10 @@
 .design-layout{
     background-color: #3E4268;
     color: #FFFFFF;
-    padding-top: 150px;
+    padding: 100px 0 80px 0;
     .banner-header{
        
-        padding: 150px 0px;
+        padding: 60px 0px;
         h1{
             font-size: 48px;
             font-weight: 500;
@@ -183,21 +195,6 @@
         padding-top: 130px;
         .banner-header{
             padding: 100px 0px;
-        }
-    }
-    @include media-breakpoint-down(sm) {
-        padding-top: 100px;
-        padding-left: 15px;
-        .only-mobile{
-            display: block;
-        }
-      
-            .only_web{
-                display: none;
-            }
-      
-        .banner-header{
-            padding: 100px 0px;
             h1{
                 font-size: 24px;
                 font-weight: 500;
@@ -208,6 +205,24 @@
                 font-weight: 300;
                 margin-top: 30px;
             }
+            .btn-white{
+                font-size: 16px;
+            }
+        }
+    }
+    @include media-breakpoint-down(sm) {
+        padding-top: 100px;
+        padding-left: 20px;
+        .only-mobile{
+            display: block;
+        }
+      
+            .only_web{
+                display: none;
+            }
+      
+        .banner-header{
+            padding: 40px 0px;
             .button{
                 margin-top: 40px;
                 img{
@@ -215,7 +230,6 @@
                 }
             }
             .btn-white{
-                font-size: 16px;
                 padding: 15px;
                 border-radius: 0px;
             }
@@ -228,9 +242,9 @@
     background-color: #C3343C;
     position: relative;
     color: #FFFFFF;
-    padding-top: 150px;
+    padding: 100px 0 80px 0;
     .banner-header{
-        padding: 150px 0px;
+        padding: 100px 0px;
         h1{
             font-size: 48px;
             font-weight: 500;
@@ -266,6 +280,19 @@
         padding-top: 130px;
         .banner-header{
             padding: 100px 0px;
+            h1{
+                font-size: 24px;
+                font-weight: 500;
+                line-height: 50px;
+            }
+            h6{
+                font-size: 16px;
+                font-weight: 300;
+                margin-top: 30px;
+            }
+            .btn-white{
+                font-size: 16px;
+            }
         }
     }
     @include media-breakpoint-down(sm) {
@@ -280,17 +307,7 @@
             }
       
         .banner-header{
-            padding: 100px 0px;
-            h1{
-                font-size: 24px;
-                font-weight: 500;
-                line-height: 50px;
-            }
-            h6{
-                font-size: 16px;
-                font-weight: 300;
-                margin-top: 30px;
-            }
+            padding: 40px 0px;
             .button{
                 margin-top: 40px;
                 img{
@@ -298,7 +315,6 @@
                 }
             }
             .btn-white{
-                font-size: 16px;
                 padding: 15px;
                 border-radius: 0px;
             }
@@ -312,7 +328,7 @@
     background-color: #53BC67;
     position: relative;
     color: #FFFFFF;
-    padding-top: 150px;
+    padding-top: 100px;
     .banner-header{
         padding: 150px 0px;
         h1{
@@ -349,6 +365,19 @@
         padding-top: 130px;
         .banner-header{
             padding: 100px 0px;
+            h1{
+                font-size: 24px;
+                font-weight: 500;
+                line-height: 50px;
+            }
+            h6{
+                font-size: 16px;
+                font-weight: 300;
+                margin-top: 30px;
+            }
+            .btn-white{
+                font-size: 16px;
+            }
         }
     }
     @include media-breakpoint-down(sm) {
@@ -363,17 +392,7 @@
             }
       
         .banner-header{
-            padding: 100px 0px;
-            h1{
-                font-size: 24px;
-                font-weight: 500;
-                line-height: 50px;
-            }
-            h6{
-                font-size: 16px;
-                font-weight: 300;
-                margin-top: 30px;
-            }
+            padding: 80px 0px;
             .button{
                 margin-top: 40px;
                 img{
@@ -381,7 +400,6 @@
                 }
             }
             .btn-white{
-                font-size: 16px;
                 padding: 15px;
                 border-radius: 0px;
             }
