--- a/src/app/modules/career/components/ux-job-apply/ux-job-apply.component.html
+++ b/src/app/modules/career/components/ux-job-apply/ux-job-apply.component.html
@@ -12,9 +12,9 @@
           <div class="careerux-design">
              <div class="row">
                 <div class="col-md-5 only-mobile">
-                   <h1>UI Designer</h1>
+                   <h1>Graphic Design</h1>
                    <h6>Experience</h6>
-                   <h5>2 to 4 years</h5>
+                   <h5>3 to 6 years</h5>
                    <h6>Location</h6>
                    <h5>Chennai, India</h5>
                    <div class="button ">
