--- a/src/app/modules/services/components/ui-development/ui-development.component.scss
+++ b/src/app/modules/services/components/ui-development/ui-development.component.scss
@@ -151,6 +151,9 @@
     @include media-breakpoint-down(sm){
         .list{
             padding: 12px;
+            span{
+                font-size: 20px;
+            }
         }
         .row{
             .col-md-5{
