--- a/src/app/modules/services/components/user-experience/user-experience.component.scss
+++ b/src/app/modules/services/components/user-experience/user-experience.component.scss
@@ -110,6 +110,9 @@
     }
     .list{
         padding: 30px;
+        img{
+            width: 30px;
+        }
         span{
             font-size: 24px;
             margin-left: 20px;
@@ -151,6 +154,9 @@
     @include media-breakpoint-down(sm){
         .list{
             padding: 12px;
+            span{
+                font-size: 20px;
+            }
         }
         .row{
             .col-md-5{
