--- a/src/app/modules/work/components/automobile-usability/automobile-usability.component.scss
+++ b/src/app/modules/work/components/automobile-usability/automobile-usability.component.scss
@@ -136,6 +136,10 @@ h6{
         }
         @include media-breakpoint-down(sm){
             padding: 50px 0px;
+            margin-bottom: 0px;
+            h2{
+                padding-left: 20px;
+            }
             .needs{
                 height: 700px;
                 overflow: hidden;
@@ -158,6 +162,7 @@ h6{
            padding: 40px 130px 80px 90px;
            background-color: #C3343C;
            h2{
+               font-size: 36px;
                font-weight: 400;
                color: #FFF;
                margin-top: 120px;
@@ -173,6 +178,17 @@ h6{
                 img{
                     padding-left: 12px;
                 }
+           }
+           @include media-breakpoint-down(sm){
+            padding: 0px 40px 80px 20px;
+            h2{
+                font-size: 30px;
+                margin-top: 80px;
+                margin-bottom: 40px;
+            }
+            .btn{
+                font-size: 16px;
+            }
            }
        }
        .right{
@@ -192,6 +208,13 @@ h6{
                    font-weight: 400;
                    margin: 0 0 10px 40px;
                }
+           }
+           @include media-breakpoint-down(sm){
+            .class{
+                h3{
+                    font-size: 24px;
+                }
+            }
            }
        }
     }
